# ctxbuilder

./: Cargo.toml  README.md
src/: context.rs  entry.rs  impls.rs  lib.rs  prelude.rs
tests/: simple.rs  subcontext.rs
